# mcml-test

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
docs/: conf.py  index.rst  src.rst
src/: __init__.py  coins.py
tests/: __init__.py  test_coin.py
